# exoconv

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  post-create.sh
.devcontainer/vscode/: launch.json
.github/: settings.yaml
exoconv/: cli.py
lib/: const.py  runner.py  util.py
lib/cmd/: dc.py  ready.py  steady.py
lib/exo/: dc.py  scummvm.py
lib/yag/: igdb.py  ports.py  scummvm.py
